syntax = "proto2";

option java_multiple_files = true;
option java_outer_classname = "Axolotl";

message SignedPreKey {
    required bytes publicKey = 2;
    required bytes privateKey = 3;
    optional bytes signature = 4;
}
